menu js pierwsze klasy

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
   <body>
     <header class="header">
       <div class="container header__class">
+        <svg class="header__menu-mobile js-open-menu" width="40" height="40">
+                  <use href="./images/menu_mobile.svg"></use>
+                </svg>
         <div class="header__nav-flex">
           <div class="header__logo">
             <a class="all-links" href="index.html"
