--- a/index.html
+++ b/index.html
@@ -21,9 +21,6 @@
   <body>
     <header class="header">
       <div class="container header__class">
-        <svg class="header__menu-mobile js-open-menu" width="40" height="40">
-                  <use href="./images/menu_mobile.svg"></use>
-                </svg>
         <div class="header__nav-flex">
           <div class="header__logo">
             <a class="all-links" href="index.html"
@@ -68,80 +65,85 @@
     </header>
 
     <main>
-      <div class="headlamp__box-h1">
+      <div class="headlamp">
         <h1 class="headlamp__description-h1">Efektywne rozwiązania<br />dla waszego biznesu</h1>
         <button type="button" class="headlamp__button" data-modal-open>Zamów usługę</button>
       </div>
+      <section></section>
 
       <div class="container">
-        <ul class="lorem section">
-          <li>
-            <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-1"></use></svg>
-            <h2 class="lorem__description">Lorem ipsum</h2>
-            <p class="lorem__description--small">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-2"></use></svg>
-            <h2 class="lorem__description">Lorem ipsum</h2>
-            <p class="lorem__description--small">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-3"></use></svg>
-            <h2 class="lorem__description">Lorem ipsum</h2>
-            <p class="lorem__description--small">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-          <li>
-            <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-4"></use></svg>
-            <h2 class="lorem__description">Lorem ipsum</h2>
-            <p class="lorem__description--small">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
-              sodales dui. Interdum et malesuada
-            </p>
-          </li>
-        </ul>
+        <section class="lorem">
+          <ul class="lorem__ul section">
+            <li>
+              <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-1"></use></svg>
+              <h2 class="lorem__description">Lorem ipsum</h2>
+              <p class="lorem__description--small">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-2"></use></svg>
+              <h2 class="lorem__description">Lorem ipsum</h2>
+              <p class="lorem__description--small">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-3"></use></svg>
+              <h2 class="lorem__description">Lorem ipsum</h2>
+              <p class="lorem__description--small">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+            <li>
+              <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-4"></use></svg>
+              <h2 class="lorem__description">Lorem ipsum</h2>
+              <p class="lorem__description--small">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non
+                sodales dui. Interdum et malesuada
+              </p>
+            </li>
+          </ul>
+        </section>
 
-        <h2 class="main-page__description-main">Czym się zajmujemy</h2>
-        <ul class="skills">
-          <li class="skills__photo">
-            <img
-              src="images/main-page/tablet.jpg"
-              alt="Zdjęcie biurka, na którym widoczny jest ekran, tablet, ręczne notatki, oraz dłonie kogoś piszącego na klawiaturze. Po zawartości ekranów można wnioskować, że ktoś coś koduje."
-              width="370"
-              height="294"
-            />
-            <p class="skills__we-do">Aplikacje komputerowe</p>
-          </li>
-          <li class="skills__photo">
-            <img
-              src="images/main-page/mockup.jpg"
-              alt="Widać jeden monitor, jeden laptop, osobę, która trzyma smartphone w ręce i ekran telefonu porównuje z makietą aplikacji wyświetlonej na ekranie laptopa."
-              width="370"
-              height="294"
-            />
-            <p class="skills__we-do">Aplikacje mobilne</p>
-          </li>
-          <li class="skills__photo">
-            <img
-              src="images/main-page/pattern.jpg"
-              alt="Widać fragment klawiatury i monitora, na pierwszym planie znajduje się dłoń trzymająca tablet. Na tablecie wyświetla się wzornik kolorów."
-              width="370"
-              height="294"
-            />
-            <p class="skills__we-do">Rozwiązania graficzne</p>
-          </li>
-        </ul>
+        <section class="skills">
+          <h2 class="main-page__description-main">Czym się zajmujemy</h2>
+          <ul class="skills__ull">
+            <li class="skills__photo">
+              <img
+                src="images/main-page/tablet.jpg"
+                alt="Zdjęcie biurka, na którym widoczny jest ekran, tablet, ręczne notatki, oraz dłonie kogoś piszącego na klawiaturze. Po zawartości ekranów można wnioskować, że ktoś coś koduje."
+                width="370"
+                height="294"
+              />
+              <p class="skills__we-do">Aplikacje komputerowe</p>
+            </li>
+            <li class="skills__photo">
+              <img
+                src="images/main-page/mockup.jpg"
+                alt="Widać jeden monitor, jeden laptop, osobę, która trzyma smartphone w ręce i ekran telefonu porównuje z makietą aplikacji wyświetlonej na ekranie laptopa."
+                width="370"
+                height="294"
+              />
+              <p class="skills__we-do">Aplikacje mobilne</p>
+            </li>
+            <li class="skills__photo">
+              <img
+                src="images/main-page/pattern.jpg"
+                alt="Widać fragment klawiatury i monitora, na pierwszym planie znajduje się dłoń trzymająca tablet. Na tablecie wyświetla się wzornik kolorów."
+                width="370"
+                height="294"
+              />
+              <p class="skills__we-do">Rozwiązania graficzne</p>
+            </li>
+          </ul>
+        </section>
       </div>
 
-      <div class="team">
+      <section class="team">
         <h2 class="main-page__description-main">Nasz zespół</h2>
         <ul class="team__ul section container">
           <li>
@@ -293,11 +295,11 @@
             </figure>
           </li>
         </ul>
-      </div>
+      </section>
 
-      <div class="container">
+      <section class="container clients">
         <h2 class="main-page__section-clients">Nasi klienci</h2>
-        <ul class="section clients">
+        <ul class="section clients__ul">
           <li class="clients__icons">
             <svg width="106" height="60"><use href="./images/icons.svg#icon-client1"></use></svg>
           </li>
@@ -317,7 +319,7 @@
             <svg width="106" height="60"><use href="./images/icons.svg#icon-client6"></use></svg>
           </li>
         </ul>
-      </div>
+      </section>
     </main>
 
     <footer class="footer">
@@ -462,6 +464,5 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
-    <script src="./js/mobile-menu.js"></script>
   </body>
 </html>
