ikona moibile menu w header

--- a/portfolio.html
+++ b/portfolio.html
@@ -375,5 +375,6 @@
     </footer>
 
     <script src="./js/modal.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
