--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
             >
           </div>
         </div>
+        <button class="menu-toggle js-open-menu" aria-expanded="false" aria-controls="mobile-menu">
+          <svg class="mobile-menu__icon" width="40" height="40">
+            <use href="./images/menu_mobile2.svg#menu_40px"></use>
+          </svg>
+        </button>
       </div>
     </header>
 
@@ -464,5 +469,6 @@
       </div>
     </div>
     <script src="./js/modal.js"></script>
+    <script defer src="js/mobile-menu.js"></script>
   </body>
 </html>
