--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
       </div>
     </footer>
 
-    <section class="mobilemenu">
+    <section class=".">
       <div class="mobile-menu js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
           <svg class="mobile-menu__icon mobile-menu__icon--close" width="40" height="40">
