podmiana ikonki na działającą

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
       <div class="mobile-menu js-menu-container" id="mobile-menu">
         <button class="menu-toggle js-close-menu">
           <svg class="mobile-menu__icon mobile-menu__icon--close" width="40" height="40">
-            <use href="./images/menu_40px(2).svg#close_40px"></use>
+            <use href="./images/close40.svg#icon-close_40px"></use>
           </svg>
         </button>
         <div class="mobile-menu__content">
