--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
       <div class="container">
         <section class="lorem">
           <ul class="lorem__ul section">
-            <li>
+            <li class="lorem__li">
               <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-1"></use></svg>
               <h2 class="lorem__description">Lorem ipsum</h2>
               <p class="lorem__description--small">
