--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="lorem__li">
               <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-2"></use></svg>
               <h2 class="lorem__description">Lorem ipsum</h2>
               <p class="lorem__description--small">
@@ -95,7 +95,7 @@
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="lorem__li">
               <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-3"></use></svg>
               <h2 class="lorem__description">Lorem ipsum</h2>
               <p class="lorem__description--small">
@@ -103,7 +103,7 @@
                 sodales dui. Interdum et malesuada
               </p>
             </li>
-            <li>
+            <li class="lorem__li">
               <svg class="lorem__lorem"><use href="./images/icons.svg#icon-Group-4"></use></svg>
               <h2 class="lorem__description">Lorem ipsum</h2>
               <p class="lorem__description--small">
