footer tablet first half

--- a/index.html
+++ b/index.html
@@ -330,11 +330,13 @@
     <footer class="footer">
       <div class="container footer__flex">
         <div class="footer__first-half">
-          <a class="all-links" href="index.html"
+          <div class="footer__logo-all"><a class="all-links" href="index.html"
             ><span class="logo__web footer__font-logo">Web</span
             ><span class="logo__studio logo__studio--white footer__font-logo">Studio</span></a
-          >
-          <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+          ></div>
+          
+          <div class="footer__under-logo">
+            <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
           <div class="mail-hover all-links">
             <a class="footer__address footer__address--grey" href="mailto:info@devstudio.com">
               info@devstudio.com
@@ -345,6 +347,8 @@
               >+48 111 111 111</a
             >
           </div>
+          </div>
+          
         </div>
 
         <div class="footer__second-half">
