footer tablet ok

--- a/index.html
+++ b/index.html
@@ -387,6 +387,7 @@
                 required
               />
             </label>
+            <div class="footer__div-button"></div>
             <button class="footer__button" type="submit">
               Zapisz się
               <svg class="footer__svg-send" width="24" height="24">
