--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/productDesigner.jpg"
+                src="images/people/productDesignerPC@2x.png"
+                srcset="images/people/productDesigner 2x, images/team1@3x.jpg 3x"
                 alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
                 width="270"
                 height="260"
@@ -192,7 +193,7 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/frontendDeveloper.jpg"
+                src="images/people/frontendDeveloperPC.jpg"
                 alt="Kobieta koło trzydziestki, z długimi błąd włosami, w burgundowych okularach."
                 width="270"
                 height="260"
@@ -229,7 +230,7 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/marketing.jpg"
+                src="images/people/marketingPC.jpg"
                 alt="Około 25 letni mężczyzna, krótko ścięty, z kilkodniowym zarostem, w niebiskiej koszuli."
                 width="270"
                 height="260"
@@ -330,25 +331,26 @@
     <footer class="footer">
       <div class="container footer__flex">
         <div class="footer__first-half">
-          <div class="footer__logo-all"><a class="all-links" href="index.html"
-            ><span class="logo__web footer__font-logo">Web</span
-            ><span class="logo__studio logo__studio--white footer__font-logo">Studio</span></a
-          ></div>
-          
-          <div class="footer__under-logo">
-            <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
-          <div class="mail-hover all-links">
-            <a class="footer__address footer__address--grey" href="mailto:info@devstudio.com">
-              info@devstudio.com
-            </a>
-          </div>
-          <div class="mail-hover all-links">
-            <a class="footer__address footer__address--grey" href="tel:+48111111111"
-              >+48 111 111 111</a
+          <div class="footer__logo-all">
+            <a class="all-links" href="index.html"
+              ><span class="logo__web footer__font-logo">Web</span
+              ><span class="logo__studio logo__studio--white footer__font-logo">Studio</span></a
             >
           </div>
+
+          <div class="footer__under-logo">
+            <address class="footer__address">m. Warszawa, Aleje Jerozolimskie 21</address>
+            <div class="mail-hover all-links">
+              <a class="footer__address footer__address--grey" href="mailto:info@devstudio.com">
+                info@devstudio.com
+              </a>
+            </div>
+            <div class="mail-hover all-links">
+              <a class="footer__address footer__address--grey" href="tel:+48111111111"
+                >+48 111 111 111</a
+              >
+            </div>
           </div>
-          
         </div>
 
         <div class="footer__second-half">
