responsywne zdjęcia team

--- a/index.html
+++ b/index.html
@@ -155,8 +155,11 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/productDesignerPC@2x.png"
-                srcset="images/people/productDesigner 2x, images/team1@3x.jpg 3x"
+                src="images/people/ProductDesignerMobile@2x.png"
+                srcset="
+                  images/people/ProductDesignerTablet@2x.png 2x,
+                  images/people/ProductDesignerPC@2x.png     3x
+                "
                 alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
                 width="270"
                 height="260"
@@ -193,7 +196,11 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/frontendDeveloperPC.jpg"
+                src="images/people/FrontendDeveloperMobile@2x.png"
+                srcset="
+                  images/people/FrontendDeveloperTablet@2x.png 2x,
+                  images/people/FrontendDeveloperPC@2x.png     3x
+                "
                 alt="Kobieta koło trzydziestki, z długimi błąd włosami, w burgundowych okularach."
                 width="270"
                 height="260"
@@ -230,7 +237,11 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/marketingPC.jpg"
+                src="images/people/MarketingMobile@2x.png"
+                srcset="
+                  images/people/MarketingTablet@2x.png 2x,
+                  images/people/MarketingPC@2x.png     3x
+                "
                 alt="Około 25 letni mężczyzna, krótko ścięty, z kilkodniowym zarostem, w niebiskiej koszuli."
                 width="270"
                 height="260"
@@ -267,7 +278,11 @@
             <figure class="team__shadow">
               <img
                 class="team__img"
-                src="images/people/uIDesigner.jpg"
+                src="images/people/UIDesignerMobile@2x.png"
+                srcset="
+                  images/people/UIDesignerTablet@2x.png 2x,
+                  images/people/UIDesignerPC@2x.png     3x
+                "
                 alt="Mężczyzna w średnim wieku w okrągłych okularach, z tygodniowym zarostem, brunet. Ubrany w czarną koszulkę. Widoczny tatuaż na lewym ramieniu."
                 width="270"
                 height="260"
