--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
       <section class="team">
         <h2 class="main-page__description-main">Nasz zespół</h2>
         <ul class="team__ul section container">
-          <li>
+          <li class="team__li-fig">
             <figure class="team__shadow">
               <img
                 class="team__img"
@@ -192,7 +192,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="team__li-fig">
             <figure class="team__shadow">
               <img
                 class="team__img"
@@ -233,7 +233,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="team__li-fig">
             <figure class="team__shadow">
               <img
                 class="team__img"
@@ -274,7 +274,7 @@
               </figcaption>
             </figure>
           </li>
-          <li>
+          <li class="team__li-fig">
             <figure class="team__shadow">
               <img
                 class="team__img"
