--- a/index.html
+++ b/index.html
@@ -322,22 +322,22 @@
         <h2 class="main-page__section-clients">Nasi klienci</h2>
         <ul class="section clients__ul">
           <li class="clients__icons">
-            <svg width="106" height="60"><use href="./images/icons.svg#icon-client1"></use></svg>
+            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client1"></use></svg>
           </li>
           <li class="clients__icons">
-            <svg width="106" height="60"><use href="./images/icons.svg#icon-client2"></use></svg>
+            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client2"></use></svg>
           </li>
           <li class="clients__icons">
-            <svg width="106" height="60"><use href="./images/icons.svg#icon-client3"></use></svg>
+            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client3"></use></svg>
           </li>
           <li class="clients__icons">
-            <svg width="106" height="60"><use href="./images/icons.svg#icon-client4"></use></svg>
+            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client4"></use></svg>
           </li>
           <li class="clients__icons">
-            <svg width="106" height="60"><use href="./images/icons.svg#icon-client5"></use></svg>
+            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client5"></use></svg>
           </li>
           <li class="clients__icons">
-            <svg width="106" height="60"><use href="./images/icons.svg#icon-client6"></use></svg>
+            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client6"></use></svg>
           </li>
         </ul>
       </section>
