team podmiana zdjęc

--- a/index.html
+++ b/index.html
@@ -154,12 +154,17 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
-                class="team__img"
-                src="images/people/ProductDesignerMobile@2x.png"
                 srcset="
-                  images/people/ProductDesignerTablet@2x.png 2x,
-                  images/people/ProductDesignerPC@2x.png     3x
+                  images/people/ProductDesignerMobile.jpg    450w,
+                  images/people/ProductDesignerMobile@2x.png 900w,
+                  images/people/ProductDesignerTablet.jpg    354w,
+                  images/people/ProductDesignerTablet@2x.png 708w,
+                  images/people/ProductDesignerPC.jpg        270w,
+                  images/people/ProductDesignerPC@2x.png     540w
                 "
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                min-width="270"
+                src="images/people/ProductDesignerPC.jpg"
                 alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
                 width="270"
                 height="260"
@@ -195,13 +200,18 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
-                class="team__img"
-                src="images/people/FrontendDeveloperMobile@2x.png"
                 srcset="
-                  images/people/FrontendDeveloperTablet@2x.png 2x,
-                  images/people/FrontendDeveloperPC@2x.png     3x
+                  images/people/FrontendDeveloperMobile.jpg    450w,
+                  images/people/FrontendDeveloperMobile@2x.png 900w,
+                  images/people/FrontendDeveloperTablet.jpg    354w,
+                  images/people/FrontendDeveloperTablet@2x.png 708w,
+                  images/people/FrontendDeveloperPC.jpg        270w,
+                  images/people/FrontendDeveloperPC@2x.png     540w
                 "
-                alt="Kobieta koło trzydziestki, z długimi błąd włosami, w burgundowych okularach."
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                min-width="270"
+                src="images/people/FrontendDeveloperPC.jpg"
+                alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
                 width="270"
                 height="260"
               />
@@ -236,13 +246,18 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
-                class="team__img"
-                src="images/people/MarketingMobile@2x.png"
                 srcset="
-                  images/people/MarketingTablet@2x.png 2x,
-                  images/people/MarketingPC@2x.png     3x
+                  images/people/MarketingMobile.jpg    450w,
+                  images/people/MarketingMobile@2x.png 900w,
+                  images/people/MarketingTablet.jpg    354w,
+                  images/people/MarketingTablet@2x.png 708w,
+                  images/people/MarketingPC.jpg        270w,
+                  images/people/MarketingPC@2x.png     540w
                 "
-                alt="Około 25 letni mężczyzna, krótko ścięty, z kilkodniowym zarostem, w niebiskiej koszuli."
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                min-width="270"
+                src="images/people/MarketingPC.jpg"
+                alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
                 width="270"
                 height="260"
               />
@@ -277,13 +292,18 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
-                class="team__img"
-                src="images/people/UIDesignerMobile@2x.png"
                 srcset="
-                  images/people/UIDesignerTablet@2x.png 2x,
-                  images/people/UIDesignerPC@2x.png     3x
+                  images/people/UIDesignerMobile.jpg    450w,
+                  images/people/UIDesignerMobile@2x.png 900w,
+                  images/people/UIDesignerTablet.jpg    354w,
+                  images/people/UIDesignerTablet@2x.png 708w,
+                  images/people/UIDesignerPC.jpg        270w,
+                  images/people/UIDesignerPC@2x.png     540w
                 "
-                alt="Mężczyzna w średnim wieku w okrągłych okularach, z tygodniowym zarostem, brunet. Ubrany w czarną koszulkę. Widoczny tatuaż na lewym ramieniu."
+                sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
+                min-width="270"
+                src="images/people/UIDesignerPC.jpg"
+                alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
                 width="270"
                 height="260"
               />
@@ -322,22 +342,34 @@
         <h2 class="main-page__section-clients">Nasi klienci</h2>
         <ul class="section clients__ul">
           <li class="clients__icons">
-            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client1"></use></svg>
+            <svg class="cos" width="106" height="60">
+              <use href="./images/icons.svg#icon-client1"></use>
+            </svg>
           </li>
           <li class="clients__icons">
-            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client2"></use></svg>
+            <svg class="cos" width="106" height="60">
+              <use href="./images/icons.svg#icon-client2"></use>
+            </svg>
           </li>
           <li class="clients__icons">
-            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client3"></use></svg>
+            <svg class="cos" width="106" height="60">
+              <use href="./images/icons.svg#icon-client3"></use>
+            </svg>
           </li>
           <li class="clients__icons">
-            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client4"></use></svg>
+            <svg class="cos" width="106" height="60">
+              <use href="./images/icons.svg#icon-client4"></use>
+            </svg>
           </li>
           <li class="clients__icons">
-            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client5"></use></svg>
+            <svg class="cos" width="106" height="60">
+              <use href="./images/icons.svg#icon-client5"></use>
+            </svg>
           </li>
           <li class="clients__icons">
-            <svg class="cos" width="106" height="60"><use href="./images/icons.svg#icon-client6"></use></svg>
+            <svg class="cos" width="106" height="60">
+              <use href="./images/icons.svg#icon-client6"></use>
+            </svg>
           </li>
         </ul>
       </section>
