team responsywne zdjecia mobile, tablet

--- a/index.html
+++ b/index.html
@@ -154,6 +154,7 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
+                class="team__img"
                 srcset="
                   images/people/ProductDesignerMobile.jpg    450w,
                   images/people/ProductDesignerMobile@2x.png 900w,
@@ -200,6 +201,7 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
+                class="team__img"
                 srcset="
                   images/people/FrontendDeveloperMobile.jpg    450w,
                   images/people/FrontendDeveloperMobile@2x.png 900w,
@@ -246,6 +248,7 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
+                class="team__img"
                 srcset="
                   images/people/MarketingMobile.jpg    450w,
                   images/people/MarketingMobile@2x.png 900w,
@@ -292,6 +295,7 @@
           <li class="team__li-fig">
             <figure class="team__shadow">
               <img
+                class="team__img"
                 srcset="
                   images/people/UIDesignerMobile.jpg    450w,
                   images/people/UIDesignerMobile@2x.png 900w,
