zmiana alt w team

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 min-width="270"
                 src="images/people/FrontendDeveloperPC.jpg"
-                alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
+                alt="Kobieta koło trzydziestki, z długimi błąd włosami, w burgundowych okularach."
                 width="270"
                 height="260"
               />
@@ -260,7 +260,7 @@
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 min-width="270"
                 src="images/people/MarketingPC.jpg"
-                alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
+                alt="Około 25 letni mężczyzna, krótko ścięty, z kilkodniowym zarostem, w niebiskiej koszuli."
                 width="270"
                 height="260"
               />
@@ -307,7 +307,7 @@
                 sizes="(min-width: 1200px) 270px, (min-width: 768px) 354px, (min-width: 480px) 450px, 100vw"
                 min-width="270"
                 src="images/people/UIDesignerPC.jpg"
-                alt="Mężczyzna koło 35 roku życia, brunet w okularach z tygodniowym zarostem."
+                alt="Mężczyzna w średnim wieku w okrągłych okularach, z tygodniowym zarostem, brunet. Ubrany w czarną koszulkę. Widoczny tatuaż na lewym ramieniu."
                 width="270"
                 height="260"
               />
